--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -48,7 +48,7 @@
             </div>
 
             <div class="col s12 m12 l7">
-                <form id="form" action="/home/alunos" method="POST">
+                <form id="form" action="/cadastro" method="POST">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
