--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
             </a>
             <h1>Faça seu Login</h1>
 
-            <form id="form" action="/home" method="GET">
+            <form id="form" action="/login" method="POST">
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
                     <input name="email" id="email" type="email" data-error=".errorTxt1">
